--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,71 @@
-$primary-color: #444;
+@import 'config';
+
+* {
+    box-sizing: border-box;
+}
 
 body{
+    @include background();
     background: $primary-color;
     color: #fff;
+    height: 100%;
+    margin: 0;
+    font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.5;
+}
+
+// Headings
+h1, h2, h3{
+    margin: 0;
+    font-weight: 400;
+
+    &.lg-heading{
+        font-size: 6rem; // 6 * default html size i.e 16px
+    }
+
+    &.sm-heading {
+        margin-bottom: 2rem;
+        padding: 0.2rem 1rem;  // top-bottom left-right
+        background: rgba(lighten($primary-color, 2), 0.5);
+    }
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+header {
+    position: fixed; // always stay in a position for the hamburger menu
+    z-index: 2; // closer to us 
+    width:100%;
+}
+
+.text-secondary{
+    color: $secondary-color;
+}
+
+main {
+    padding: 4rem;
+    height: 100%;
+
+    .icons {
+        margin-top: 1rem;
+
+        a {
+            padding: 0.4rem;
+
+            &:hover {
+                color: $secondary-color; 
+                @include easeOut();
+            }
+        }
+    }
+    // anything that is inside main and has id of home is gonna be affected
+    &#home {  
+        overflow: hidden; // Dont want to scroll the page
+        h1 {
+            margin-top: 20vh; // Full page is 100 vh so its takes 20 vertical height space
+        }
+    }
 }
