--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,12 +1,13 @@
 @import 'config';
 @import 'menu';
+@import 'mobile';
 
 * {
     box-sizing: border-box;
 }
 
 body{
-    @include background();
+    @include background;
     background: $primary-color;
     color: #fff;
     height: 100%;
@@ -16,7 +17,7 @@ body{
 }
 
 // Headings
-h1, h2, h3{
+h1, h2, h3 {
     margin: 0;
     font-weight: 400;
 
@@ -39,7 +40,7 @@ a {
 header {
     position: fixed; // always stay in a position for the hamburger menu
     z-index: 2; // closer to us 
-    width:100%;
+    width: 100%;
 }
 
 .text-secondary{
@@ -64,7 +65,7 @@ main {
     }
     // anything that is inside main and has id of home is gonna be affected
     &#home {  
-        overflow: hidden; // Dont want to scroll the page
+        overflow: hidden;// Dont want to scroll the page
         h1 {
             margin-top: 20vh; // Full page is 100 vh so its takes 20 vertical height space
         }
