--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,54 +4,61 @@ $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
 
-// kindof like a function
 @mixin easeOut {
-    transition: all 0.5s ease-out; // all transitions take x seconds and eases-out(motion)
-}
-@mixin background {
-    @if $show-home-image {
-        &#bg-img {
-            background: $home-image;
-            background-attachment: fixed;
-            background-size: cover;  // background image covers full page
-            
-            // the translusent layer between the bg image and the text contents using a pseudo element that takes place after the bg-img instead of adding a seperate div in our html 
-            &:after {
-                content: '';
-                position: absolute;
-                top: 0;
-                right: 0;
-                width: 100%;
-                height: 100%;
-                z-index: -1; // overlay goes behind the texts
-                background: rgba($primary-color, $background-opacity);
-            }
-        }
-    }
+  transition: all 0.5s ease-out;
 }
 
-// Meidia Query Mixins
-@mixin mediaSm {
-    @media screen and (max-width: 500px) {
-        @content;
+@mixin background {
+  @if $show-home-image {
+    &#bg-img {
+      background: $home-image;
+      background-attachment: fixed;
+      background-size: cover;
+
+      &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background: rgba($primary-color, $background-opacity);
+      }
     }
+  }
+}
+
+// Set Text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
+
+// Media Query Mixins
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
 }
 
 @mixin mediaMd {
-    @media screen and (max-width: 768px) {
-        @content;
-    }
+  @media screen and (max-width: 768px) {
+    @content;
+  }
 }
 
 @mixin mediaLg {
-    @media screen and (min-width: 769px) and (max-width: 1170px) {
-        @content;
-    }
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content;
+  }
 }
 
-@mixin mediaXl{
-    @media screen and (min-width: 1171px) {
-        @content;
-    }
+@mixin mediaXl {
+  @media screen and (min-width: 1171px) {
+    @content;
+  }
 }
-
