--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,6 @@
-$primary-color: #444;
+$primary-color: #574d4d;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
@@ -11,7 +10,6 @@ $background-opacity: 0.9;
 @mixin background {
   @if $show-home-image {
     &#bg-img {
-      background: $home-image;
       background-attachment: fixed;
       background-size: cover;
 
