--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,7 +46,8 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url('../img/portrait_small.jpg');
+      background: url('../img/sangye.jpg') center no-repeat;
+      background-size: cover;
       width: 150px;
       height: 150px;
     }
@@ -66,6 +67,30 @@
   .projects {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  #about-landing {
+    h1 {
+      font-size: 32px;
+      font-weight: 700;
+      letter-spacing: -1px;
+      line-height: 32px;
+      margin-bottom: 5px;
+    }
+
+    h2 {
+      font-size: 26px;
+      font-weight: 400;
+      letter-spacing: 2px;
+      line-height: 36px;
+      margin: 30px;
+    }
+
+    a {
+      margin-bottom: 40px;
+      font-size: 16px;
+      padding: 20px;
+    }
+  }
 }
 
 // Smartphones
@@ -79,7 +104,7 @@
     .lg-heading {
       margin-top: 1rem;
       font-size: 5rem;
-      font-size: 30px;
+      font-size: 38px;
     }
 
     .sm-heading {
@@ -91,4 +116,30 @@
   .projects {
     grid-template-columns: 1fr;
   }
+
+  #about-landing {
+    h1 {
+      font-size: 32px;
+      font-weight: 700;
+      letter-spacing: -1px;
+      line-height: 32px;
+      margin-bottom: 5px;
+    }
+
+    h2 {
+      font-size: 16px;
+      font-weight: 400;
+      letter-spacing: 1px;
+      line-height: 24px;
+      margin: 30px;
+    }
+
+    a {
+      margin-bottom: 50px;
+      font-size: 16px;
+      padding: 10px;
+    }
+    
+  }
 }
+
