--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import 'config';
+@import 'index';
 @import 'menu';
+@import 'about';
 
 * {
   box-sizing: border-box;
@@ -74,44 +76,7 @@ main {
   }
 }
 
-.about-info {
-  display: grid;
-  grid-gap: 30px;
-  grid-template-areas:
-    'bioimage bio bio'
-    'job1 job2 job3';
-  grid-template-columns: repeat(3, 1fr);
 
-  .bio-image {
-    grid-area: bioimage;
-    margin: auto;
-    border-radius: 50%;
-    border: $secondary-color 3px solid;
-  }
-
-  .bio {
-    grid-area: bio;
-    font-size: 1.5rem;
-  }
-
-  .job-1 {
-    grid-area: job1;
-  }
-
-  .job-2 {
-    grid-area: job2;
-  }
-
-  .job-3 {
-    grid-area: job3;
-  }
-
-  .job {
-    background: lighten($primary-color, 5);
-    padding: 0.5rem;
-    border-bottom: $secondary-color 5px solid;
-  }
-}
 
 // Work/Projects
 .projects {
@@ -158,7 +123,7 @@ main {
 }
 
 // Button Styles
-.btn {
+.btns {
   display: block;
   padding: 0.5rem 1rem;
   border: 0;
@@ -169,14 +134,14 @@ main {
   }
 }
 
-.btn-dark {
-  @extend .btn;
+.btn-darks {
+  @extend .btns;
   background: darken($primary-color, 50);
   color: #fff;
 }
 
-.btn-light {
-  @extend .btn;
+.btn-lights {
+  @extend .btns;
   background: lighten($primary-color, 50);
   color: #333;
 }
