home and about done

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -31,7 +31,7 @@
     position: absolute;
     width:100%;
     z-index:1;
-    background:#225470;
+    background:#0b0c10;
     opacity:0.85;
 }
 
