--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,9 +3,11 @@
 html , #about {
     height: 100%;
     width: 100%;
+    max-width: 100vw;
 }
 
 #about-landing {
+    // background: #050801;
     background: #050801;
     background:url('../img/ironman1.jpg') no-repeat center fixed;
     width: 100%;
@@ -146,3 +148,28 @@ html , #about {
 	font-size: 23px;
 }
 
+.padding{
+    padding-bottom: 2rem;
+  }
+
+.resume{
+    max-width: 100vw;
+    background-color: #fff;
+    padding-top: 10px;
+    font-family: proxima-nova;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0em;
+    line-height: 1.8em;
+    text-transform: none;
+    color: rgba(26,26,26,.75);
+}
+.resume h2{
+    font-size: 24px;
+    letter-spacing: 1px;
+}
+
+.resume h3{
+    font-size: 17.5px;
+    font-weight: 500;
+}
