--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,106 +1,113 @@
-*{
-    box-sizing: border-box;
-  }
-  
-  body{
-    background:#92bde7;
-    color:#485e74;
-    line-height:1.6;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding:1em;
-  }
-  
-  .container{
-    max-width:1170px;
-    margin-left:auto;
-    margin-right:auto;
-    padding:1em;
-  }
-  
-  ul{
-    list-style: none;
-    padding:0;
-  }
-  
-  .brand{
-    text-align: center;
-  }
-  
-  .brand span{
-    color:#fff;
-  }
-  
+#contact{
+  background:rgb(24, 27, 27);
+  color:#485e74;
+  line-height:1.6;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.container{
+  max-width:1170px;
+  margin-left:auto;
+  margin-right:auto;
+  padding:1em;
+  padding-top: 100px;
+}
+
+ul{
+  list-style: none;
+  padding:0;
+}
+
+.brand{
+  text-align: center;
+}
+
+.wrapper{
+  box-shadow: 0 20px 50px rgba(146,189,231,0.7);
+  border-radius: 20px;
+}
+
+.wrapper > *{
+  padding: 1em;
+}
+
+.company-info{
+  background:#c9e6ff; 
+  border-bottom-left-radius: 20px;
+  border-top-left-radius: 20px;
+}
+
+.company-info h3, .company-info ul{
+  text-align: center;
+  margin:0 0 1rem 0;
+}
+
+.contact{
+  background:#f9feff;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+/* FORM STYLES */
+.contact form{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap:20px;
+}
+
+.contact form label{
+  display:block;
+}
+
+.contact form p{
+  margin:0;
+}
+
+.contact form .full{
+  grid-column: 1 / 3;
+}
+
+.contact form button, .contact form input, .contact form textarea{
+  width:100%;
+  border:1px solid #c9e6ff;
+  padding: 12px 20px;
+}
+
+.contact form button{
+  background:#c9e6ff;
+  border:0;
+  text-transform: uppercase;
+  padding: 15px 32px;
+}
+
+.contact form button:hover,.contact form button:focus{
+  background:#92bde7;
+  color:#fff;
+  outline:0;
+  transition: background-color 2s ease-out;
+}
+
+.social a{
+  color: #485e74;
+  padding: 13px;
+}
+
+.social a:hover {
+  color: rgb(177, 8, 8);
+}
+
+/* LARGE SCREENS */
+@media(min-width:700px){
   .wrapper{
-    box-shadow: 0 0 20px 0 rgba(72,94,116,0.7);
-  }
-  
-  .wrapper > *{
-    padding: 1em;
-  }
-  
-  .company-info{
-    background:#c9e6ff;
-  }
-  
-  .company-info h3, .company-info ul{
-    text-align: center;
-    margin:0 0 1rem 0;
-  }
-  
-  .contact{
-    background:#f9feff;
-  }
-  
-  /* FORM STYLES */
-  .contact form{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap:20px;
+    grid-template-columns: 1fr 2fr;
   }
-  
-  .contact form label{
-    display:block;
+
+  .wrapper > *{
+    padding:2em;
   }
-  
-  .contact form p{
-    margin:0;
+
+  .company-info h3, .company-info ul, .brand{
+    text-align: left;
   }
-  
-  .contact form .full{
-    grid-column: 1 / 3;
-  }
-  
-  .contact form button, .contact form input, .contact form textarea{
-    width:100%;
-    padding:1em;
-    border:1px solid #c9e6ff;
-  }
-  
-  .contact form button{
-    background:#c9e6ff;
-    border:0;
-    text-transform: uppercase;
-  }
-  
-  .contact form button:hover,.contact form button:focus{
-    background:#92bde7;
-    color:#fff;
-    outline:0;
-    transition: background-color 2s ease-out;
-  }
-  
-  /* LARGE SCREENS */
-  @media(min-width:700px){
-    .wrapper{
-      display: grid;
-      grid-template-columns: 1fr 2fr;
-    }
-  
-    .wrapper > *{
-      padding:2em;
-    }
-  
-    .company-info h3, .company-info ul, .brand{
-      text-align: left;
-    }
-  }
+}
