--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'index';
 @import 'about';
 @import 'work';
+@import 'contact';
 
 * {
   box-sizing: border-box;
@@ -158,30 +159,6 @@ main {
       }
     }
   }
-}
-
-// Button Styles
-.btn {
-  display: block;
-  padding: 0.5rem 1rem;
-  border: 0;
-  margin-bottom: 0.3rem;
-  &:hover {
-    background: $secondary-color;
-    color: set-text-color($secondary-color);
-  }
-}
-
-.btn-dark {
-  @extend .btn;
-  background: darken($primary-color, 50);
-  color: #fff;
-}
-
-.btn-light {
-  @extend .btn;
-  background: lighten($primary-color, 50);
-  color: #333;
 }
 
 #main-footer {
