--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -116,7 +116,7 @@
 }
 /*card3*/
 .card-image.card3 {
-  background: url("../img/img3.jpg");
+  background: url("../img/timesheet.png");
   background-size: cover;
 }
 .card-text.card3 .date {
